# sql-functions

./: .gitignore  .sdf-release  Cargo.toml  README.md  contributing.md  function_mod_template.jinja  function_template.jinja
.githooks/: pre-commit
.github/scripts/: release.py
.github/workflows/: build-test.yml  publish.yml  step.create_git_release.yml  sync-sdf-release.yml
assets/bigquery/: functions.sdf.yml
assets/presto/: functions.sdf.yml  functions_extra.sdf.yml
assets/redshift/: functions.sdf.yml
assets/snowflake/: functions.sdf.yml  functions_extra.sdf.yml  snowflake.csv
assets/trino/: functions.sdf.yml  functions_extra.sdf.yml  trino.csv
signatures/presto/: functions.sdf.yml
src/: lib.rs  macros.rs  utils.rs  utils_arrow.rs  utils_regexp.rs
src/presto/: abs_bigint.rs  abs_double.rs  abs_impl.rs  acos_double.rs  acos_impl.rs  all_match_array_1_function_1_boolean.rs  all_match_impl.rs  any_match_array_1_function_1_boolean.rs  any_match_impl.rs  array_distinct_array_3.rs  array_distinct_impl.rs  array_except_array_3_array_3.rs  array_except_impl.rs  array_intersect_array_3_array_3.rs  array_intersect_impl.rs  array_join_array_1_varchar_varchar.rs  array_join_impl.rs  array_max_array_1.rs  array_max_impl.rs  array_min_array_1.rs  array_min_impl.rs  array_position_array_1_1.rs  array_position_impl.rs  array_remove_array_3_3.rs  array_remove_impl.rs  array_sort_array_3.rs  array_sort_impl.rs  array_union_array_3_array_3.rs  array_union_impl.rs  arrays_overlap_array_3_array_3.rs  arrays_overlap_impl.rs  asin_double.rs  asin_impl.rs  at_timezone_impl.rs  at_timezone_timestamp_p_varchar.rs  atan2_double_double.rs  atan2_impl.rs  atan_double.rs  atan_impl.rs  bar_double_bigint_color_color.rs  (+687 more)
(+351 files in other folders)
