# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "sql-functions"
version = "0.1.3"
edition = "2021"
description = "A library of dialect specific SQL Functions"
readme = "README.md"
repository = "https://github.com/sdf-labs/sql-functions"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sql_functions"
path = "src/lib.rs"

[features]
# Enable encoding by default so the doctests work. In general don't automatically enable all packages.
default = ["trino_expressions"]
# enable math functions
trino_expressions = []

[dependencies]
datafusion = { version = "39.0.0" }
arrow = { version = "52.0.0", features = ["prettyprint"] }
#arrow-flight = { workspace = true }
#arrow-schema = { workspace = true }
tokio = "1.33.0"
chrono = "0.4"
chrono-tz = "0.5"
regex = "1.10.2"
log = "0.4.20"
rust-embed = "6.4.2"
